# MCP-starterkit

./: MCP(Model Context Protocol) Overview.one  main.py  mcp.json  prompts_server.py  pyproject.toml  python_studybuddy.md  resources_server.py  server_part2.py  settings.json  study_progress.json  tools_server.py
AIResearchHub/: README.MD  paper_manager.py  server.py
AIResearchHub/data/: research_papers.json  research_papers_v1.json
RAG_client/: dummy.txt  server.py
simple_client_development/: README.MD  client.py  mcp_server.py
