[project]
name = "mcp-python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "mcp[cli]>=1.9.4",
    "pandas>=2.3.1",
    "rich>=14.0.0",
    "dataclasses-json>=0.6.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "sentence-transformers>=5.1.0",
    "langchain-huggingface>=0.3.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "A"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py311"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "coverage",
    "pytest-cov",
]
